--- a/Projet_final_de_fin_de_formation/package.json
+++ b/Projet_final_de_fin_de_formation/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Conception en local d'un site de vente en lign:cas amazone",
   "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
@@ -23,5 +24,9 @@
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
